--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.4",
+    "express": "^4.21.2",
+    "http": "0.0.1-security",
+    "nodemon": "^3.1.9",
+    "socket.io": "^4.8.1",
     "tailwindcss": "^4.0.4",
     "vue": "^3.5.13"
   },
