--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "http": "0.0.1-security",
     "nodemon": "^3.1.9",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.4",
     "vue": "^3.5.13"
   },
